--- a/Login.html
+++ b/Login.html
@@ -3,13 +3,50 @@
 <head>
     <title>IVE Restaurant</title>
     <link rel="stylesheet" href="css/Login.css"/>
-    <script src="js/jquery-3.3.1.js">
+    <script src="js/jquery-3.3.1.js"></script>
+    <script arc="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>
         $(document).ready(function() {
             $("#left_button").click(function() {
+                $("#restaurant").animate({
+                    left: '25%',
+                    opacity: '0.3',
+                    width: '170px',
+                    height: '170px',
+                    
+                });
+
+                $("#manager").animate({
+                    left: '35%',
+                    opacity: '1',
+                    width: '200px',
+                    height: '200px',            
+                });
                 
+                document.getElementById("role").value = "managers";
+            });
+            $("#right_button").click(function() {
+                $("#restaurant").animate({
+                    left: '35%',
+                    opacity: '1',
+                    width: '200px',
+                    height: '200px',     
+                });
+
+                $("#manager").animate({
+                    left: '53%',
+                    opacity: '0.3',
+                    width: '170px',
+                    height: '170px',          
+                });
+
+                document.getElementById("role").value = "restaurants";
             });
             $("input").focus(function() {
                 $(this).css("background-color", "#CCCCCC");
+            });
+            $("input").blur(function() {
+                $(this).css("background-color", "#FFFFFF");
             });
         });
     </script>
@@ -25,8 +62,8 @@
     <aside>
         <div class="role">
             <div id="left_button"></div>
-            <img src="" alt="Restaurant"/>
-            <img src="" alt="Manager" style="display:none"/>
+            <img id="restaurant" src="image/restaurant_icon.png" alt="Restaurant"/>
+            <img id="manager" src="image/manager_icon.png" alt="Manager"/>
             <img src="" alt="Suppliers" style="display:none"/>
             <img src="" alt="Warehouse Staff" style="display:none"/>
             <div id="right_button"></div>
@@ -34,12 +71,13 @@
     </aside>
     <secion>
         <div class="login_area">
-            <form>
+            <form method="POST" action="Login.php">
+                <input type="hidden" id="role" name="role" value="restaurants"/>
                 <label for="username">ID:</label>
-                <input type="text" Name="username" id ="username" placeholder="Username"/>
+                <input type="text" Name="username" id ="username" placeholder="Username" required/>
                 <br><br>
                 <label for="password">Password:</label>
-                <input type="password" Name="password" id ="password" placeholder="Password"/>
+                <input type="password" Name="password" id ="password" placeholder="Password" required/>
                 <br><br>
                 <input type="submit" id="login" value="Login"/>
             </form>
