--- a/Login.html
+++ b/Login.html
@@ -72,12 +72,12 @@
     <secion>
         <div class="login_area">
             <form method="POST" action="Login.php">
-                <input type="hidden" id="role" name="role" value="restaurants"/>
+                <input type="hidden" name="role" id="role" value="restaurants"/>
                 <label for="username">ID:</label>
-                <input type="text" Name="username" id ="username" placeholder="Username" required/>
+                <input type="text" name="username" id ="username" placeholder="Username" required/>
                 <br><br>
                 <label for="password">Password:</label>
-                <input type="password" Name="password" id ="password" placeholder="Password" required/>
+                <input type="password" name="password" id ="password" placeholder="Password" required/>
                 <br><br>
                 <input type="submit" id="login" value="Login"/>
             </form>
